--- a/MocoApplication/defaultRegParams.plist
+++ b/MocoApplication/defaultRegParams.plist
@@ -2,11 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>doLogging</key>
-	<true/>
+	<key>LoggingLevel</key>
+	<integer>1</integer>
 	<key>NumberOfThreads</key>
-	<integer>5</integer>
+	<integer>2</integer>
 	<key>Smoothing</key>
 	<true/>
+	<key>SmoothingSigma</key>
+	<integer>8</integer>
+	<key>MaskImagesForRegistration</key>
+	<true/>
+	<key>UseBestFoundParameters</key>
+	<false/>
+	<key>NumberOfIterations</key>
+	<integer>16</integer>
 </dict>
 </plist>
