--- a/MocoApplication/defaultRegParams.plist
+++ b/MocoApplication/defaultRegParams.plist
@@ -5,7 +5,7 @@
 	<key>LoggingLevel</key>
 	<integer>3</integer>
 	<key>NumberOfThreads</key>
-	<integer>2</integer>
+	<integer>1</integer>
 	<key>Smoothing</key>
 	<true/>
 	<key>SmoothingSigma</key>
@@ -16,5 +16,9 @@
 	<false/>
 	<key>NumberOfIterations</key>
 	<integer>10</integer>
+	<key>ResampleOutputBase</key>
+	<string>/Users/realtime/MRINCOMING/image_mocoAppExport_MOCO_</string>
+	<key>MocoParamsOutputBase</key>
+	<string>/Users/realtime/MRINCOMING/mocoParameters_mocoApp_</string>
 </dict>
 </plist>
