Complete icon set included

--- a/MocoApplication/MocoApplication-Info.plist
+++ b/MocoApplication/MocoApplication-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>Icon2.png</string>
+	<string>appIcon</string>
 	<key>CFBundleIdentifier</key>
 	<string>MPI.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
